@@ -25,8 +25,10 @@
 - Fixed bug #37348 (make PEAR install ignore open_basedir). (Ilia)
 - Fixed bug #37313 (sigemptyset() used without including <signal.h>).
   (jdolecek)
+- Fixed bug #37306 (max_execution_time = max_input_time). (Dmitry)
 - Fixed bug #37244 (Added strict flag to base64_decode() that enforces 
   RFC3548 compliance). (Ilia)
+
 
 04 May 2006, PHP 5.1.4
 - Added "capture_peer_cert" and "capture_peer_cert_chain" context options
